# lnxdrive-gnome

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  meson.build  meson_options.txt
.devtrail/07-ai-audit/agent-logs/: AILOG-2026-02-05-001-implement-mock-dbus-daemon.md  AILOG-2026-02-05-002-implement-gnome-shell-extension.md  AILOG-2026-02-05-003-implement-nautilus-extension.md  AILOG-2026-02-05-004-implement-onboarding-wizard-scaffold.md  AILOG-2026-02-05-005-implement-preferences-panel.md  AILOG-2026-02-05-006-stage8-polish-cross-cutting.md  AILOG-2026-02-07-001-implement-conflict-resolution-ui.md  AILOG-2026-02-20-001-mvp-closure-dbus-bus-name-unification.md  AILOG-2026-02-22-001-fix-nautilus-icon-colors-and-invalidation.md
data/: meson.build
goa-provider/: README.md  meson.build
nautilus-extension/: meson.build
nautilus-extension/src/: lnxdrive-column-provider.c  lnxdrive-column-provider.h  lnxdrive-dbus-client.c  lnxdrive-dbus-client.h  lnxdrive-extension.c  lnxdrive-info-provider.c  lnxdrive-info-provider.h  lnxdrive-menu-provider.c  lnxdrive-menu-provider.h
po/: LINGUAS  POTFILES.in  lnxdrive-gnome.pot  meson.build
preferences/: Cargo.toml  meson.build
preferences/data/: com.enigmora.LNXDrive.Preferences.desktop.in  com.enigmora.LNXDrive.Preferences.gschema.xml  com.enigmora.LNXDrive.Preferences.metainfo.xml.in
preferences/src/: app.rs  dbus_client.rs  main.rs  window.rs
preferences/src/conflicts/: conflict_dialog.rs  conflict_list.rs  mod.rs
preferences/src/onboarding/: auth_page.rs  confirm_page.rs  folder_page.rs  mod.rs
preferences/src/preferences/: account_page.rs  advanced_page.rs  folder_tree.rs  mod.rs  sync_page.rs
shell-extension/: meson.build
shell-extension/lnxdrive-indicator@enigmora.com/: dbus.js  extension.js  indicator.js  menuItems.js  metadata.json  prefs.js  stylesheet.css
specs/001-gnome-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gnome-integration/checklists/: pending-issues.md  requirements.md
specs/001-gnome-integration/contracts/: dbus-gnome-contracts.md
src/: main.rs
tests/: mock-dbus-daemon.py  test-nautilus-extension.py  test-shell-extension.js
