option('enable_nautilus', type: 'boolean', value: true,
       description: 'Build Nautilus file manager extension')
option('enable_shell', type: 'boolean', value: true,
       description: 'Install GNOME Shell status indicator extension')
option('enable_preferences', type: 'boolean', value: true,
       description: 'Build GTK4/libadwaita preferences application')
option('enable_goa', type: 'boolean', value: false,
       description: 'Build GNOME Online Accounts provider (P3, deferred)')
