datadir = get_option('datadir')

install_data(
  'icons' / 'hicolor' / 'scalable' / 'apps' / 'com.enigmora.LNXDrive.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

install_data(
  'icons' / 'hicolor' / 'symbolic' / 'apps' / 'com.enigmora.LNXDrive-symbolic.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'symbolic' / 'apps',
)
