# GNOME Online Accounts provider for LNXDrive
# Status: P3 — deferred, placeholder only
#
# Enable with: meson setup builddir -Denable_goa=true

if get_option('enable_goa')
  # TODO: Implement GOA provider shared library
  #
  # Planned implementation:
  #   goa_deps = [
  #     dependency('goa-1.0'),
  #     dependency('goa-backend-1.0'),
  #     dependency('webkit2gtk-6.0'),
  #     dependency('gio-2.0'),
  #   ]
  #
  #   shared_library('lnxdrive-goa-provider',
  #     sources: [
  #       'src/lnxdrive-goa-provider.c',
  #       'src/lnxdrive-goa-provider.h',
  #     ],
  #     dependencies: goa_deps,
  #     install: true,
  #     install_dir: get_option('libdir') / 'goa-1.0' / 'web-extensions',
  #   )

  message('GOA provider is enabled but not yet implemented (P3)')
endif
