[package]
name = "lnxdrive-preferences"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "LNXDrive preferences and onboarding application for GNOME"
authors = ["Enigmora <dev@enigmora.com>"]

[[bin]]
name = "lnxdrive-preferences"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
zbus = "5"
# lnxdrive-ipc = { git = "https://github.com/enigmora/lnxdrive.git", package = "lnxdrive-ipc" }
oauth2 = "5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
futures-util = "0.3"
